<resources>
    <string name="app_name">Controle Amostras</string>


    <string name="save">Salvar</string>
    <string name="textEdta">%s de EDTA</string>
    <string name="textSoro">%s de Soro</string>
    <string name="textCitrato">%s de Citrato</string>
    <string name="textUrina">%s de Urina</string>
    <string name="textFezes">%s de Fezes</string>
    <string name="Date_and_time">28/06/2021 08:00</string>
    <string name="local_coleta_longo">Centro de Saude (18)</string>
    <string name="local_coleta_upa">Upa</string>
    <string name="_0">0</string>
    <string name="TuboRoxoEdta">EDTA</string>
    <string name="TuboVermelhoSoro">Soro</string>
    <string name="FrascoUrina">Urina</string>
    <string name="FrascoFezes">Fezes</string>
    <string name="ButtonSave">Salvar</string>
    <string name="TuboAzulCitrato">Citrato</string>

    <string-array name="todos_locais_coleta">
        <item>Upa</item>
        <item>Centro de Saude (18)</item>
    </string-array>


</resources>