<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/tvLog"
    >

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.chip.Chip
                android:id="@+id/tvCitrato"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginStart="76dp"
                android:layout_marginTop="4dp"
                android:text="@string/textCitrato"
                app:chipBackgroundColor="@color/white"
                app:chipStrokeColor="@color/teal_200"
                app:chipStrokeWidth="1dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.chip.Chip
                android:id="@+id/tvFezes"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/textFezes"
                app:chipBackgroundColor="@color/white"
                app:chipStrokeColor="@color/brown"
                app:chipStrokeWidth="1dp"
                app:layout_constraintStart_toEndOf="@+id/tvCitrato"
                app:layout_constraintTop_toBottomOf="@+id/tvUrina" />

            <com.google.android.material.chip.Chip
                android:id="@+id/tvEdta"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginTop="4dp"
                android:text="@string/textEdta"
                app:chipBackgroundColor="@color/white"
                app:chipStrokeColor="@color/purple_500"
                app:chipStrokeWidth="1dp"
                app:layout_constraintStart_toStartOf="@+id/tvCitrato"
                app:layout_constraintTop_toBottomOf="@+id/tvCitrato" />

            <com.google.android.material.chip.Chip
                android:id="@+id/tvUrina"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/textUrina"
                app:chipBackgroundColor="@color/white"
                app:chipStrokeColor="@color/yellow"
                app:chipStrokeWidth="1dp"
                app:layout_constraintStart_toEndOf="@+id/tvCitrato"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.chip.Chip
                android:id="@+id/tvSoro"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginTop="4dp"
                android:text="@string/textSoro"
                app:chipBackgroundColor="@color/white"
                app:chipStrokeColor="@color/red"
                app:chipStrokeWidth="1dp"
                app:layout_constraintStart_toStartOf="@+id/tvEdta"
                app:layout_constraintTop_toBottomOf="@+id/tvEdta" />

            <ImageButton
                android:id="@+id/btnImage"

                android:layout_width="48dp"
                android:layout_height="36dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/btnEdit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_photo_24" />

            <ImageButton
                android:id="@+id/btnEdit"

                android:layout_width="48dp"
                android:layout_height="36dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnImage"
                app:srcCompat="@drawable/ic_baseline_edit_24" />

            <com.google.android.material.chip.Chip
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/Date_and_time"
                android:textSize="8sp"
                app:chipBackgroundColor="@color/white"
                app:chipStrokeColor="@color/black"
                app:chipStrokeWidth="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgLocaldeColeta"
                android:layout_width="60dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/circle" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>